wier/force-app/main/default/objects/Job_Updated_by_Planning__c/Job_Updated_by_Planning__c.object-meta.xml
<CustomObject>
    <label>Job Update</label>
    <nameField>
        <displayFormat>SJID-{000000000}</displayFormat>
        <label>Salesforce Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Update</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>