wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Comments_by_planning__c.field-meta.xml
<CustomField>
    <fullName>Comments_by_planning__c</fullName>
    <label>Comments by planning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>