wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Delivery_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Date__c</fullName>
    <label>Delivery Note Date</label>
    <type>Date</type>
</CustomField>