wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Delivery_Note_No__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_No__c</fullName>
    <label>Delivery Note No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>