wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Job_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed_Date__c</fullName>
    <description>Job Completed Date</description>
    <label>Job Completed Date</label>
    <type>DateTime</type>
</CustomField>