wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Job_delivered__c.field-meta.xml
<CustomField>
    <fullName>Job_delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job delivered</label>
    <type>Checkbox</type>
</CustomField>