wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Job_delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_delivered_Date__c</fullName>
    <label>Job delivered Date</label>
    <type>DateTime</type>
</CustomField>