wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Job_handed_over_to_Operation__c.field-meta.xml
<CustomField>
    <fullName>Job_handed_over_to_Operation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job handed over to Operation</label>
    <type>Checkbox</type>
</CustomField>