wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Job_handed_over_to_Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_handed_over_to_Operation_Date__c</fullName>
    <description>Job_handed_over_to_Operation_Date</description>
    <label>Job handed over to Operation Date</label>
    <type>DateTime</type>
</CustomField>