wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Job_ready_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Job_ready_for_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job ready for Delivery</label>
    <type>Checkbox</type>
</CustomField>