wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Job_ready_for_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_ready_for_Delivery_Date__c</fullName>
    <description>Job ready for Delivery Date</description>
    <label>Job ready for Delivery Date</label>
    <type>DateTime</type>
</CustomField>