wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Movex_CO_No__c.field-meta.xml
<CustomField>
    <fullName>Movex_CO_No__c</fullName>
    <formula>opportunity__r.Movex_CO_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Movex CO No.</label>
    <type>Text</type>
</CustomField>