wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <label>opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipName>Job_Updated_by_Planning</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>