wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Planned_Job_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Job_Delivery_Date__c</fullName>
    <description>Planned Job Delivery Date</description>
    <label>Planned Job Delivery Date</label>
    <type>Date</type>
</CustomField>