wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Planned_Job_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Job_Hours__c</fullName>
    <label>Planned Job Hours</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>