wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Planned_job_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_job_Start_date__c</fullName>
    <description>Planed Job Start date</description>
    <label>Planned Job Start date</label>
    <type>Date</type>
</CustomField>