wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Reason_for_change_in_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_change_in_delivery_date__c</fullName>
    <label>Reason for change in delivery date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Await consumables</fullName>
            </value>
            <value>
                <fullName>Await customer confirmation</fullName>
            </value>
            <value>
                <fullName>Await spares</fullName>
            </value>
            <value>
                <fullName>Await technical info from Tendering / Sales</fullName>
            </value>
            <value>
                <fullName>Change of work scope</fullName>
            </value>
            <value>
                <fullName>Cutting capacity constraint</fullName>
            </value>
            <value>
                <fullName>Machine break down</fullName>
            </value>
            <value>
                <fullName>Material delay / Material late arrival</fullName>
            </value>
            <value>
                <fullName>Material supplied not as per reqd spacs</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Process delay</fullName>
            </value>
            <value>
                <fullName>PWHT delay</fullName>
            </value>
            <value>
                <fullName>Rework / NCR</fullName>
            </value>
            <value>
                <fullName>Sickness</fullName>
            </value>
            <value>
                <fullName>Sub contract delay</fullName>
            </value>
            <value>
                <fullName>Third party witness delay</fullName>
            </value>
            <value>
                <fullName>Urgent / Unplanned jobs</fullName>
            </value>
            <value>
                <fullName>Work center over capacity</fullName>
            </value>
            <value>
                <fullName>Workshop space constraint : transport/motion/waiting waste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>