wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Revised_Job_Delivery_Date_if_any__c.field-meta.xml
<CustomField>
    <fullName>Revised_Job_Delivery_Date_if_any__c</fullName>
    <label>Revised Job Delivery Date (if any)</label>
    <type>Date</type>
</CustomField>