wier/force-app/main/default/objects/Job_Updated_by_Planning__c/fields/Work_Order_number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_number__c</fullName>
    <label>Work Order number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>