wier/force-app/main/default/objects/Job_Updated_by_Planning__c/recordTypes/Job_Completed.recordType-meta.xml
<RecordType>
    <fullName>Job_Completed</fullName>
    <active>true</active>
    <description>Job Completed</description>
    <label>Job Completed</label>
</RecordType>