wier/force-app/main/default/objects/Job_Updated_by_Planning__c/recordTypes/Job_handed_over_to_Operation.recordType-meta.xml
<RecordType>
    <fullName>Job_handed_over_to_Operation</fullName>
    <active>true</active>
    <description>Job handed over to Operation</description>
    <label>Job handed over to Operation</label>
</RecordType>