wier/force-app/main/default/objects/Job_Updated_by_Planning__c/recordTypes/Job_ready_to_delivery.recordType-meta.xml
<RecordType>
    <fullName>Job_ready_to_delivery</fullName>
    <active>true</active>
    <description>Job ready to delivery</description>
    <label>Job ready to delivery</label>
</RecordType>