wier/force-app/main/default/objects/Job_Updated_by_Planning__c/recordTypes/Job_Update_after_PO.recordType-meta.xml
<RecordType>
    <fullName>Job_Update_after_PO</fullName>
    <active>true</active>
    <description>Job Update after PO</description>
    <label>Job Update after PO</label>
</RecordType>