wier/force-app/main/default/objects/Job_Updated_by_Planning__c/validationRules/Excepted_Job_Delivery_Date_valdation.validationRule-meta.xml
<ValidationRule>
    <fullName>Excepted_Job_Delivery_Date_valdation</fullName>
    <active>true</active>
    <errorConditionFormula>Planned_job_Start_date__c &gt; Planned_Job_Delivery_Date__c</errorConditionFormula>
    <errorDisplayField>Planned_job_Start_date__c</errorDisplayField>
    <errorMessage>Expected job Start date must be on or before Expected Job Delivery Date.</errorMessage>
</ValidationRule>