wier/force-app/main/default/objects/Job_Updated_by_Planning__c/validationRules/New_Jo_Update_validation_after_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Jo_Update_validation_after_locked</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW(),IF( opportunity__r.Jod_Update_locked__c =TRUE,TRUE,FALSE),FALSE)</errorConditionFormula>
    <errorMessage>You can&apos;t add any jobs since the customer order has already been acknowledged.</errorMessage>
</ValidationRule>