wier/force-app/main/default/objects/Job_Updated_by_Planning__c/validationRules/Planned_Job_Hours_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_Job_Hours_validation</fullName>
    <active>true</active>
    <description>Planned_Job_Hours_validation</description>
    <errorConditionFormula>Planned_Job_Hours__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Planned_Job_Hours__c</errorDisplayField>
    <errorMessage>Planned Job Hours must be greater than zero.</errorMessage>
</ValidationRule>