wier/force-app/main/default/objects/Job_Updated_by_Planning__c/validationRules/Revised_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Revised_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Planned_Job_Delivery_Date__c &gt;= Revised_Job_Delivery_Date_if_any__c , Text( Reason_for_change_in_delivery_date__c )!=&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Reason_for_change_in_delivery_date__c</errorDisplayField>
    <errorMessage>You must select &apos;None&apos; if Revised Job Delivery Date is on or before Planned Job Delivery Date.</errorMessage>
</ValidationRule>