wier/force-app/main/default/objects/Job_Updated_by_Planning__c/validationRules/Revised_date_validation_after_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Revised_date_validation_after_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Planned_Job_Delivery_Date__c &lt; Revised_Job_Delivery_Date_if_any__c , Text( Reason_for_change_in_delivery_date__c )==&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Reason_for_change_in_delivery_date__c</errorDisplayField>
    <errorMessage>You must select the most suitable option from the drop down menu.</errorMessage>
</ValidationRule>