wier/force-app/main/default/objects/Job_Updated_by_Planning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Comments_by_planning__c</columns>
    <columns>Movex_CO_No__c</columns>
    <columns>Work_Order_number__c</columns>
    <columns>Planned_job_Start_date__c</columns>
    <columns>Job_handed_over_to_Operation_Date__c</columns>
    <columns>Planned_Job_Delivery_Date__c</columns>
    <columns>Revised_Job_Delivery_Date_if_any__c</columns>
    <columns>Job_Completed_Date__c</columns>
    <columns>Reason_for_change_in_delivery_date__c</columns>
    <columns>Job_delivered_Date__c</columns>
    <columns>Delivery_Note_Date__c</columns>
    <columns>Delivery_Note_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Contracts_Manager</role>
        <role>Dubai_Oilfield_Planning_Representative</role>
        <role>General_Manager</role>
        <role>Managing_Director</role>
    </sharedTo>
</ListView>