wier/force-app/main/default/objects/Job_Updated_by_Planning__c/listViews/Finance_User_View.listView-meta.xml
<ListView>
    <fullName>Finance_User_View</fullName>
    <columns>NAME</columns>
    <columns>opportunity__c</columns>
    <columns>Movex_CO_No__c</columns>
    <columns>Work_Order_number__c</columns>
    <columns>Job_delivered_Date__c</columns>
    <columns>Delivery_Note_Date__c</columns>
    <columns>Delivery_Note_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_delivered__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Finance User View</label>
    <sharedTo>
        <role>Finance_Representative</role>
        <role>Financial_Controller</role>
    </sharedTo>
</ListView>